--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-jose[cryptography] (>=3.4.0,<4.0.0)",
     "passlib (>=1.7.4,<2.0.0)",
     "bcrypt (>=4.3.0,<5.0.0)",
+    "alembic (>=1.15.1,<2.0.0)",
 ]
 
 
