--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "passlib (>=1.7.4,<2.0.0)",
     "bcrypt (>=4.3.0,<5.0.0)",
     "alembic (>=1.15.1,<2.0.0)",
+    "fastui (>=0.7.0,<0.8.0)",
 ]
 
 
